src/objects/Packing_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Cost_lbs__c</fullName>
        <label>Packing Cost ($/lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Kit__c</fullName>
        <label>Price Kit</label>
        <referenceTo>Price_Kit__c</referenceTo>
        <relationshipLabel>Packing Cost</relationshipLabel>
        <relationshipName>Packing_Cost</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Packing Cost</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Packing Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>